# soundmaterial

./: .gitignore  .gitmodules  README.md  TODOS  pyproject.toml  setup.py
scripts/: embed.py  example.py  playground.py
scripts/datasets/: clack.py  prosound.py
scripts/utils/: convert.py  remove_wav_duplicates.py
soundmaterial/: __init__.py  add.py  caption.py  chunk.py  clean.py  core.py  create.py  dataset.py  listen.py  separate.py  subset.py  summarize.py  train_test_split.py  utils.py
soundmaterial/dsp/: signal.py
tests/: test_soundmaterial.py
