[project]
name = "soundmaterial"
version = "0.0.1"
dependencies = [
    "pandas",
    "argbind",
    "gradio"
]
requires-python = ">=3.8"
authors = []
description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]
